syntax = "proto3";

package workflows;

import "edge/edge.proto";
import "settings/settings.proto";
import "stroppy/test.proto";
import "validate/validate.proto";
import "deployment/deployment.proto";

option go_package = "github.com/stroppy-io/hatchet-workflow/internal/proto/workflows";


message Workflows {
    /*
        Main workflow for running stroppy test suite
        This step can request database setup if one of test.database_ref is Database
    */
    message StroppyTestSuite {
        message Input {
            stroppy.TestSuite suite = 1 [(validate.rules).message.required = true];
            settings.Settings settings = 2 [(validate.rules).message.required = true];
            deployment.Target target = 3 [(validate.rules).enum.defined_only = true];
        }
        message Output {
            stroppy.TestSuiteResult results = 1 [(validate.rules).message.required = true];
        }
    }

    /*
        Run single stroppy test
        This can create single LocalProvision steps for initialize
    */
    message StroppyTest {
        message Input {
            stroppy.RunSettings run_settings = 1 [(validate.rules).message.required = true];
        }
        message Output {
            repeated stroppy.TestResult result = 1 [(validate.rules).repeated.min_items = 1];
        }
    }
}
